<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Global app label -->
    <string name="app_name">Soln.R</string>
    <string name="title_publications">Publications</string>
    <string name="title_syndications">RSS feed</string>
    <string name="title_site">Web site</string>
    <string name="title_categories">Categories</string>
    <string name="title_category">Category</string>
    <string name="title_network">Network</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_look_and_fell">Look and feel</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_add_categorie">Add a new category</string>
    <string name="menu_add_site">Add a new web site</string>
    <string name="menu_show_already_read">See publications already read</string>
    <string name="menu_hide_already_read">Hide publications already read</string>
    <string name="menu_read_on_web_site">Read on the web site</string>
    <string name="menu_show_favorite">Display favorite</string>
    
     <string name="menu_favorite">Favorite</string>
     <string name="menu_Share">Share</string>
     <string name="menu_delete">Delete</string>
       
    <string name="add_favorite">Add to favorite</string>
    <string name="remove_favorite">Remove to favorite</string>
    <string name="Delete">Delete</string>
    <string name="Delete_fail">Deletion has fail !</string>
    <string name="read">Read</string>
    <string name="rename">Rename</string>
    <string name="all">all</string>
    <string name="action_bar_search">Recherche</string>
    <string name="stop_search">Set the interval to zero stops the search for new publications</string>
    <string name="please_wait">Please wait</string>
    <string name="item_brev">item(s)</string>
    <string name="minute_brev">minute(s)</string>
    <string name="defaultTypeface">Default</string>
    <string name="font_size">Font size</string>
    <string name="last_publications">What\'s new !</string>

    <!-- Publication's tab label -->
    <string name="all_publications_by_syndication_already_read">All the publications of the syndication %1$s are marked as read</string>
    <string name="all_publications_by_category_already_read">All the publications of the category %1$s are marked as read</string>
    <string name="all_publications_already_read">All the publications are marked as read</string>
    <string name="empty_publications">No publications to display.</string>
    <string name="empty_publications_with_syndication">No publications found for syndication %1$s. </string>
    <string name="empty_publications_with_category">No publications found for category %1$s. </string>
    
    <string name="empty_publications_date_last_found">No more publication. </string>
    <string name="empty_publications_date_last_found_with_filter">No more publication with the search: %1$s </string>
     
    <string name="empty_publications_with_filter">No publications found with the search: %1$s</string>
    <string name="empty_publications_with_syndication_with_filter">No publications found for syndication %1$s and %2$s research.</string>
    <string name="empty_publications_with_category_with_filter">No publications found for category %1$s and %2$s research.</string>
    <string name="open_browser_bad_url">Can not display on the browser, the link appears to be corrupt.</string>

    <!-- Context publication's context menu -->
    <string name="display_one_publication">View publications</string>
    <string name="display_all_publication">View all publications</string>
    <string name="mark_all_read">Mark all as read</string>
    <string name="mark_as_read">Mark as read</string>
    <string name="confirm_mark_as_read">Mark %1$s as read ?</string>
    <string name="confirm_delete">Delete %1$s ?</string>
    <string name="mark_selected_category_read">Mark category as read</string>

    <!-- New publication notification -->
    <string name="notify_new_pub_title">New publications</string>

    <!--  -->
    <plurals name="notify_new_pub_msg">
        <item quantity="zero">No new publication</item>
        <item quantity="one">%1$d new publication</item>
        <item quantity="other">%1$d news publications </item>
    </plurals>

    <!-- Search syndication task result -->
    <string name="feed_search_error">Error, could not retrieve RSS information.</string>
    <string name="feed_search_ok">The RSS feed of the site being found.</string>
    <string name="feed_not_found">Sorry, but the web site\'s RSS feed was not found.</string>
    <string name="site_record_error">Error with the database. The insertion of new publications failed</string>
    <string name="site_already_recorded">A web site with the address already exists</string>
    <string name="load_syndication">Search RSS. Please wait</string>
    <string name="no_connection">No internet connection is in operation.</string>
    <string name="no_connection_wifi">Connection is limited to WIFI. You can change this in the parameters</string>
    <string name="http_get_error">Error, unable to contact the web site.</string>
    <string name="bad_url">Error, Unable to contact the web site, please check your input.</string>
    <string name="empty_url">Enter a correct web site address, please check your input</string>
    <string name="retrieve_http">Try to connect</string>
    <string name="searching_feed">Searching rss feed</string>
    <string name="found_feed">Found rss information try to retrieve feed </string>
    <string name="record_feed">Record in application</string>
    <string name="process_ok">Found RSS feed for %1$s with %2$s new publications</string>
    <string name="delete_syndication_ok">This RSS feed is deleted</string>
    <string name="clean_syndication_ok">All publications are deleted</string>

    <!-- Syndication manager activity -->
    <string name="site_parameter">%1$s</string>
    <string name="clean_articles_btn">Delete publications</string>
    <string name="delete_articles_btn">Delete this RSS feed</string>
    <string name="active_articles_btn">Enable search for new publications</string>
    <string name="unactive_articles_btn">Disable the search for new publications</string>
    <string name="display_articles_on_time_line">Visible in the main flow</string>
    <string name="undisplay_articles_on_time_line">Invisible in the main flow</string>
    <string name="delete_ok">The deletion was made</string>
    <string name="mark_as_read_ok">Publications marked as read</string>
    <string name="clean_confirm">Do you want to delete all its publications ?</string>
    <string name="mark_as_read_confirm">Mark the publications as read ?</string>
    <string name="delete_confirm">Do you Want to delete this RSS and all its publications ?</string>
    <string name="creation_date">Create: %1$s</string>
    <string name="input_new_name">Please enter a new name</string>
    <string name="unactive_syndication">The search for new publications is disabled</string>
    <string name="active_syndication">The search for new publications is activated</string>
    <string name="display_syndication">The visibility of publications is complete</string>
    <string name="undisplay_syndication">Publications are visible through the category or syndication tab</string>
    
    <plurals name="syndication_number_of_click">
        <item quantity="one">%1$s publication already read</item>
        <item quantity="other">%1$s publications already read</item>
    </plurals>
    
    <string name="syndication_last_search_result">Last search publication error</string>

    <string name="empty_syndications">No RSS feed to display.</string>
    <string name="empty_syndications_with_filter">No RSS feed found for the site %1$s with %2$s research.</string>
    <string name="sleep_img">The search for new publications for this RSS feed is paused.</string>
    <string name="stealth_img">This syndication\'s publications are not displayed in main time line.</string>
    <string name="hide_syndication">Hide</string>
    <string name="pause_syndication">Pause</string>

    <!-- Settings -->
    <!-- View Read / Unread -->
    <string name="pref_view_unread">Management of the main flow</string>
    <string name="pref_summ_view_unread_off">Show only unread publications</string>
    <string name="pref_summ_view_unread_on">View all publications read and unread</string>

    <!-- Unread font weight -->
    <string name="pref_view_font_weight">Publication font weight</string>
    <string name="pref_view_font_weight_off">Unread publications are not displayed in bold</string>
    <string name="pref_view_font_weight_on">Unread publications are displayed in bold</string>

    <!-- Display a notification after found new publications -->
    <string name="pref_display_notify">Notify</string>
    <string name="pref_summ_display_notify_on">A notification appears after finding new publications</string>
    <string name="pref_summ_display_notify_off">No notification after finding new publications</string>
    <string name="pref_display_publication">Read the publication</string>
    <string name="pref_display_publication_browser">Show directly in a browser</string>
    <string name="pref_display_publication_app">In application Screen</string>
    <string name="pref_search_publication_time">Search new publications every</string>
    <string name="pref_publication_item_number">Maximum number of publications to keep</string>
    <string name="pref_delete_all_publications">Delete all publications</string>
    <string name="pref_delete_all_publications_confirm">It will delete all publications stored in database. Are you sure ?</string>
    <string name="pref_not_run_on_boot">The updating process is launched after the application start</string>
    <string name="pref_run_on_boot">The updating process is launched after the device boot</string>
    <string name="pref_how_to_start_refresh">Updating process</string>
    <string name="pref_use_wifi_only">Use wifi only</string>
    <string name="pref_use_all_connection">Use all types of connection</string>
    <string name="pref_what_type_of_connection">Connection type</string>

    <!-- Category -->
    <string name="empty_categories">No categories to display</string>
    <string name="empty_categories_with_filter">No categories found with %1$s search</string>
    <string name="delete_categorie">Delete this category</string>
    <string name="rename_category">Rename this category</string>
    <string name="add_to_categorie">Add or Remove RSS</string>
    <string name="categorie_not_use">Not used</string>
    <string name="categorie_use_by_one">Used by a single RSS feed</string>
    <string name="categorie_use_by_many">Used by %1$s RSS</string>

    <!-- Dialog add item -->
    <string name="add_categorie_explain">Add a new category</string>
    <string name="add_site_explain">Enter a valid web site address</string>
    <string name="add_categorie">New Category</string>
    <string name="add_site">New web site</string>
    <string name="new_syndication_hint">A web site address or valid RSS feed</string>
    <string name="new_category_hint">Enter the new category name</string>
    <string name="pref_sort_syndications_most_use">The most commonly used</string>
    <string name="pref_sort_syndications_alphabetic">Alphabetical</string>
    <string name="pref_sort_syndications">Sort web sites</string>
    <string name="pref_sort_categories_most_use">The most commonly used</string>
    <string name="pref_sort_categories_alphabetic">Alphabetical</string>
    <string name="pref_sort_categories">Sort categories</string>
    <string name="pref_user_type_face">Font</string>

</resources>