<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="first_preferencescreen" >

    <PreferenceScreen
        android:key="pref_cat_apparence"
        android:title="@string/title_look_and_fell" >

        <ListPreference
            android:defaultValue="0"
            android:entries="@array/listTypeFace"
            android:entryValues="@array/listTypeFaceValues"
            android:key="pref_user_font_face"
            android:title="@string/pref_user_type_face" >
        </ListPreference>

        <free.solnRss.preference.SeekBarDialogPreference
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:defaultValue="16"
            android:key="pref_user_font_size"
            android:summary="Changer la taille de la police des listes"
            android:title="@string/font_size"
            app:max="24"
            app:min="12"
            app:progressTextSuffix="sp" />
    </PreferenceScreen>

    <PreferenceScreen
        android:key="pref_cat_category"
        android:title="@string/title_category" >

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_sort_categories"
            android:summaryOff="@string/pref_sort_categories_alphabetic"
            android:summaryOn="@string/pref_sort_categories_most_use"
            android:title="@string/pref_sort_categories" />
    </PreferenceScreen>

    <PreferenceScreen
        android:key="pref_cat_network"
        android:title="@string/title_network" >

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_what_type_of_connection"
            android:summaryOff="@string/pref_use_all_connection"
            android:summaryOn="@string/pref_use_wifi_only"
            android:title="@string/pref_what_type_of_connection" />
    </PreferenceScreen>

    <PreferenceScreen
        android:key="pref_cat_publication"
        android:title="@string/title_publications" >

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_display_unread"
            android:summaryOff="@string/pref_summ_view_unread_off"
            android:summaryOn="@string/pref_summ_view_unread_on"
            android:title="@string/pref_view_unread" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_display_publication"
            android:summaryOff="@string/pref_display_publication_browser"
            android:summaryOn="@string/pref_display_publication_app"
            android:title="@string/pref_display_publication" />

        <!-- 
        <free.solnRss.preference.ItemSeekBarPreference
            android:defaultValue="100"
            android:key="pref_max_publication_item"
            android:title="@string/pref_publication_item_number" />
             -->

        <free.solnRss.preference.SeekBarDialogPreference
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:defaultValue="16"
            android:key="pref_max_publication_item"
            android:title="@string/pref_publication_item_number"
            app:max="500"
            app:min="20"
            app:progressTextSuffix=" items" />

        <free.solnRss.preference.DeleteAllPublicationsPreferences
            android:dialogMessage="@string/pref_delete_all_publications_confirm"
            android:dialogTitle="Confirm"
            android:key="pref_delete_all_publications"
            android:negativeButtonText="@android:string/cancel"
            android:positiveButtonText="@android:string/ok"
            android:title="@string/pref_delete_all_publications" />
    </PreferenceScreen>

    <PreferenceScreen
        android:key="pref_cat_search"
        android:title="@string/pref_how_to_start_refresh" >

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_display_notify"
            android:summaryOff="@string/pref_summ_display_notify_off"
            android:summaryOn="@string/pref_summ_display_notify_on"
            android:title="@string/pref_display_notify" />

        <!--
             free.solnRss.preference.SeekBarPreference
            android:defaultValue="15"
            android:key="pref_search_publication_time"
            android:title="@string/pref_search_publication_time" /
        -->

        <free.solnRss.preference.SeekBarDialogPreference
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:defaultValue="15"
            android:key="pref_search_publication_time"
            android:title="@string/pref_search_publication_time"
            app:max="100"
            app:min="0"
            app:progressTextSuffix=" min (Set to 0 stop search)" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_how_to_start_refresh"
            android:summaryOff="@string/pref_not_run_on_boot"
            android:summaryOn="@string/pref_run_on_boot"
            android:title="@string/pref_how_to_start_refresh" />
    </PreferenceScreen>

    <PreferenceScreen
        android:key="pref_cat_site"
        android:title="@string/title_site" >

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_sort_syndications"
            android:summaryOff="@string/pref_sort_syndications_alphabetic"
            android:summaryOn="@string/pref_sort_syndications_most_use"
            android:title="@string/pref_sort_syndications" />
    </PreferenceScreen>

</PreferenceScreen>