<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        android:id="@+id/syndication_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="#ff0099cc"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/syndication_number_of_click"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="12dp"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/syndication_activity"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/pause_syndication"
        android:textSize="16sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/syndication_display_mode"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:src="@drawable/ic_stealth"
        android:text="@string/hide_syndication"
        android:textSize="16sp"
        android:visibility="gone" />
    
     <TextView
        android:id="@+id/syndication_last_search_result"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:src="@drawable/ic_stealth"
        android:text="@string/syndication_last_search_result"
        android:textSize="16sp"
        android:visibility="gone" />

</LinearLayout>